syntax = "proto3";

import "google/api/annotations.proto";

package special_app_v1;

option go_package = "special_admin/pkg/proto/v1;special_admin_v1";


service AdminAuthService {
    rpc Login(LoginRequest) returns (LoginResponse) {
      option (google.api.http) = {
        post: "/v1/auth/login"
        body: "*"
      };
    }
    rpc RefreshToken(RefreshRequest) returns (RefreshResponse) {
      option (google.api.http) = {
        get: "/v1/auth/refresh"
      };
    }
    rpc Logout(LogoutRequest) returns (LogoutResponse) {
        option (google.api.http) = {
            get: "/v1/auth/logout"
        };
    }
}

message LoginRequest {
    string login = 1;
    string password = 2;
}

message LoginResponse {
    string access_token = 1;
    string refresh_token = 2;
    string message = 3;
}

message RefreshRequest {
  string grant_type = 1;
}

message RefreshResponse {
    string access_token = 1;
    string message = 3;
}

message LogoutRequest {
  string grant_type = 1;
}

message LogoutResponse {
    string message = 1;
}